deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-root
  namespace: krms
  labels:
    app: dc-root
    version: v3.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-root
  template:
    metadata:
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
      labels:
        app: dc-root
        version: v3.1
    spec:
      containers:
      - name: dc-root
        image: 088356671508.dkr.ecr.ap-northeast-2.amazonaws.com/krms3.1-aws-etv/devicecore/dc-root:latest
        ports:
        - name: grpc
          containerPort: 5000
        resources:
          requests:
            cpu: "10m"
            memory: "100Mi"
          limits:
            cpu: "50m"
            memory: "250Mi"
        readinessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
